crux-llvm/test-data/golden/golden-loop-merging/nested_unsafe.config
solver: "z3"
path-sat: yes
path-sat-solver: "yices"
opt-loop-merge: yes
clang-opts: "-fno-unroll-loops"
